--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 body {
   margin: 10vh 0px;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Helvetica, sans-serif;
 }
